--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">app</string>
+
+    <string name="qr_scanner_title">ABA Scan QR</string>
+    <string name="qr_scanner_subtitle">Scan QR</string>
+    <string name="qr_scanner_instruction">Align Frame with QR Code</string>
+    <string name="qr_pay_manually">PAY MANUALLY</string>
+
+    <string name="aba_mobile">ABA Mobile</string>
+
+    <!-- Dashboard -->
+    <string name="dashboard_title">ABA Mobile</string>
+    <string name="accounts">Account</string>
+    <string name="transfers">Transfers</string>
+    <string name="payments">Payments</string>
+    <string name="deposit">Deposit</string>
+    <string name="cash_to_atm">Cash to ATM</string>
+    <string name="virtual_card">Virtual Card</string>
+    <string name="scan_qr">Scan QR</string>
+    <string name="loans">Loans</string>
+    <string name="aba_locator">ABA Locator</string>
+
+    <string name="quick_transfer">Quick Transfer</string>
+    <string name="quick_transfer_description">Create your template here to make transfer quicker</string>
+
+    <string name="quick_payment">Quick Payment</string>
+    <string name="quick_payment_description">Paying your bill with templates is faster</string>
 </resources>
